--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords"
           content="Responsive, HTML5, admin theme, business, professional, React, web design, CSS3, sass">
     <title>UGPS</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+    <link rel="icon" type="image/png" href="favicon_UGPS.ico"/>
     <link rel="stylesheet" href="vendors/material-design-iconic-font/css/material-design-iconic-font.min.css">
     <link rel="stylesheet" href="vendors/weather-icons/css/weather-icons.min.css">
     <link rel="stylesheet" type="text/css" href="vendors/flag/sprite-flags-32x32.css"/>
